Brazil Portugal Rework

--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -14,7 +14,23 @@
     war_goal_enforce_pu: "[WAR_GOAL_DRAFT.GetTarget.GetName] [concept_personal_union]"
     war_goal_enforce_pu_desc: "[WAR_GOAL_DRAFT.GetHolder.GetName] forces [WAR_GOAL_DRAFT.GetTarget.GetName] to become a [concept_personal_union]."
 
+    #Brazil
+    dyn_c_united_kingdom_brz:1 "United Kingdom of Brazil and Portugal"
+    brz_power_greater_por_tt: "The [concept_prestige], Army [concept_power_projection], and Navy [concept_power_projection] of [ROOT.GetCountry.GetName] is greater than or equal to those of [SCOPE.sCountry('portugal_scope').GetName]"
+    reclaim_portugal_button:0 "Reclaim Portugal"
+    reclaim_portugal_button_desc:0 "The severing of the dynastic bond between #bold Brazil#! and Portugal remains an unresolved injustice. Diplomatic efforts have failed to secure recognition of Brazil’s rightful primacy within the Bragança legacy. Only war can restore the ancient union and bring Portugal back into a shared imperial destiny under Brazilian leadership."
+    je_portugal_brazil_reversal:0 "The Lost Metropole"
+    je_portugal_brazil_reversal_reason:0 "[SCOPE.sCountry('portugal_scope').GetName]'s fall from imperial primacy was not fate, but failure — a hollowing of authority that severed the #v Bragança#! legacy and left [ROOT.GetCountry.GetName] to carry the crown’s true weight across the ocean. Lisbon may call itself the motherland, yet it was #v Brazil’s#! strength, wealth, and stability that preserved the dynasty when the old order faltered. So long as #v $POR$#! remains outside our rightful orbit, the Lusitanian world is divided and incomplete. If #v Brazil#! is to claim its destiny as the senior heir of this shared monarchy, it must confront the metropole’s defiance and restore the ancient union — not as a colony reclaimed, but as a kingdom returned."
+    lusofonia.3.c:0 "Brazil stands as the heart of the Empire."
+    modifier_portugal_brz_transoceanic_empire: "Pluricontinentalismo
+    brz_new_metropole: "The New Metropole"
+    lusofonia.3.d_3:0 "[SCOPE.sCountry('portugal_scope').GetName] has been brought beneath the [ROOT.GetCountry.GetAdjective] crown. Through war and determination, the balance of empire has been reversed, and a transatlantic personal union restored under [ROOT.GetCountry.GetAdjective] leadership."
+    annex_por_brz:0 "Annex Portugal"
+    annex_por_brz_desc:0 "With #v $POR$#! bound to the $BRZ_ADJ$ crown and its autonomy reduced to a formality, the time has come to end the illusion of separation. We will move to incorporate #v $POR$#! directly into the realm, extinguishing the last remnants of metropolitan defiance and securing the empire as one."
+
+
     #Portugal
+    dyn_c_united_kingdom_por:1 "United Kingdom of Portugal and Brazil"
     has_reconquista_je_tt: "Has the #v $je_portuguese_reconquista$#! [concept_journal_entry]"
     annex_brazil_por:0 "Annex Brazil"
     annex_brazil_por_desc:0 "With #v $BRZ$#! bound to the $POR_ADJ$ crown and its autonomy reduced to a formality, the time has come to end the illusion of separation. We will move to incorporate #v $BRZ$#! directly into the realm, extinguishing the last remnants of colonial secession and securing the empire as one."
