red ottos + italy fix

--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
 
+    #Italy
+    modifier_italian_unification_discouraged: "Italian Unification Discouraged"
+
     #Synthetics Company
     company_synth_oil_dynamic_name_tag_singular: "Synthetic"
     company_synth_oil_dynamic_name_tag_plural: "Synthetics"
