--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -1,7 +1,12 @@
 ﻿l_english:
 
-    #Italy
-    modifier_italian_unification_discouraged: "Italian Unification Discouraged"
+    #Infamy
+    country_infamy_generation_low_liberty_desire_mult: "Low liberty desire subjects have less infamy generation"
+
+    #British subjects
+    canada_australia_rejoin_decision:0 "Rejoin the British Sphere"
+    canada_australia_rejoin_decision_desc:0 "The Empire may have loosened its grip, but history, commerce, and kinship still bind us to #v $GBR$#!. By accepting the return of British influence, we secure diplomatic backing and renewed access to imperial markets — not as a subject reclaimed, but as a partner choosing stability over isolation."
+
 
     #Synthetics Company
     company_synth_oil_dynamic_name_tag_singular: "Synthetic"
@@ -148,7 +153,8 @@
     australia_growth_modifier:0 "Australian Expansion"
     aus_unified_australia_new:0 "Australian Federation"
 
-    #Itly
+    #Italy
+    modifier_italian_unification_discouraged: "Italian Unification Discouraged"
     italian_idea_modifier:0 "Italian Idea"
     italian_unifier_prestige_new:0 "Risorgimento"
     italian_unifiers_ig_new:0 "Italian Unifiers"   
@@ -188,7 +194,6 @@
     automatic_privatization_decision_remove_desc:0 "Disables Automatic Privatization"
     modifier_auto_privatize:0 "Automatic Privatization"
 
-    pm_improved_steam_engines:0 "Improved Steam Engines"
 
     #Persia
     persia_events.1.e:0 "The east must be brought into our sphere."
