implemented some 1.12.2 changes + cleanup

--- a/localization/english/ip3_02_l_english.yml
+++ b/localization/english/ip3_02_l_english.yml
@@ -324,6 +324,12 @@ grunderzeit_possible_tt: "#v 75%#! or more of all #bold German#! [Concept('conce
 grunderzeit_progress_bar: "Gründerzeit"
 grunderzeit_progress_bar_desc: "Recent [Concept('concept_gdp', '$concept_gdp_short$')] Goals Met: #v [JournalEntry.GetCurrentBarValue(ScriptedProgressBar.Self)|0]/4#!"
 
+je_grunderzeit_fail_header: "A #b recession#! will begin if:\n"
+je_grunderzeit_on_fail_header: "If a #b recession#! begins:\n$EFFECT$"
+
+grunderzeit_gdp_target_met: "#variable [GetPlayer.MakeScope.ScriptValue('grunderzeit_actual_gdp_script_value')|gK]#!"
+grunderzeit_gdp_target_not_met: "#variable [GetPlayer.MakeScope.ScriptValue('grunderzeit_actual_gdp_script_value')|rK]#!"
+
 grunderzeit.1.t: "Gründerkrach" # Panic of 1873
 grunderzeit.1.d: "Years of optimism and financial growth have come to a screeching halt, with blood-red numbers numbers reported across German stock exchanges as banks and speculative companies collapse like dominos."
 grunderzeit.1.f: "#bold Bank Run in [ROOT.GetCountry.GetCapital.GetCityHubName]#!\nThe announcement of the liquidation of a series of prominent companies triggered an avalanche, sweeping away not only small investors but also well-known financiers. All day, telegram couriers have been frantically dashing through crowds, and merchants were seen burning their worthless stock certificates."
@@ -370,9 +376,9 @@ grunderzeit_status_desc_key_4: "The Economy is #g Booming#!"
 grunderzeit_status_desc_key_0: "The Economy has #bold Crashed#!"
 
 je_bavarocracy: "Bavarocracy"
-je_bavarocracy_reason: "Ever since its establishment in 1832, the nascent [ROOT.GetCountry.GetAdjective] kingdom — the first truly independent Greek state since the days of Constantine XI — has been under the thumb of [SCOPE.sCharacter('king_otto_scope').GetPrimaryRoleTitle] [SCOPE.sCharacter('king_otto_scope').GetFirstName] and his Bavarian regents.\n\nIf the young king wants to prove himself as a worthy ruler of the Hellenes, he will have to take drastic steps to appease his new subjects. "
-je_bavarocracy_complete_tt: "Bavarocratic Ire is below #v 10#!"
-je_bavarocracy_fail_tt: "Bavarocratic Ire has been at #v 80#! or above for #v 50#! months. Currently this has been true for #v [GetPlayer.MakeScope.Var('je_bavarocracy_timer_var').GetValue]#! months."
+je_bavarocracy_reason:1 "Ever since its establishment in 1832, the nascent [ROOT.GetCountry.GetAdjective] kingdom — the first truly independent Greek state since the days of Constantine XI — has been under the thumb of [SCOPE.sCharacter('king_otto_scope').GetPrimaryRoleTitle] [SCOPE.sCharacter('king_otto_scope').GetFirstName] and his Bavarian regents.\n\nIf the young king wants to prove himself as a worthy ruler of the Hellenes, he will have to take bold steps to manage the [Concept('concept_bavarocratic_ire', '$concept_bavarocratic_ire_short$')] of his new subjects."
+je_bavarocracy_complete_tt: "[concept_bavarocratic_ire] is below #v 10#!"
+je_bavarocracy_fail_tt: "[concept_bavarocratic_ire] has been at #v 80#! or above for #v 50#! months. Currently this has been true for #v [GetPlayer.MakeScope.Var('je_bavarocracy_timer_var').GetValue]#! months."
 modifier_foreign_administration: "Foreign Administration"
 
 bavarocracy_german_characters_tt: "[GetCulture('south_german').GetName] [Concept('concept_commander','$concept_commanders$')] or [Concept('concept_character', '$concept_characters$')] in [concept_in_government]"
@@ -393,7 +399,7 @@ je_bavarocracy_convert_button: "Convert to Eastern Orthodoxy"
 je_bavarocracy_convert_button_desc: "Despite [ROOT.GetCountry.GetName] being a firmly [GetReligion('orthodox').GetName] country, [SCOPE.sCharacter('king_otto_scope').GetPrimaryRoleTitle] [SCOPE.sCharacter('king_otto_scope').GetFirstName] has steadfastly clung to his native [GetReligion('catholic').GetName] faith, causing considerable consternation among his newfound subjects.\n\nIf Othonian rule is to endure among the Greeks, perhaps some personal sacrifices must be made?"
 modifier_suspected_crypto_catholic: "Suspected Crypto-Catholic"
 je_bavarocracy_convert_possible: "[SCOPE.sCharacter('king_otto_scope').GetPrimaryRoleTitle] [SCOPE.sCharacter('king_otto_scope').GetFirstName] follows the [GetReligion('catholic').GetName] creed"
-bavarocracy_progress_bar_decrease_10_tt: "#bold Decreases#! #bold Bavarocratic Ire#! by #variable 10#!"
+bavarocracy_progress_bar_decrease_10_tt: "#bold Decreases#! [concept_bavarocratic_ire] by #variable 10#!"
 
 bavarocracy_progress_bar: "Bavarocratic Ire"
 bavarocracy_progress_bar_desc: "[concept_bavarocratic_ire]: ([JournalEntry.GetCurrentBarValue(ScriptedProgressBar.Self)]/100)"
