--- a/localization/english/agitators_2_l_english.yml
+++ b/localization/english/agitators_2_l_english.yml
@@ -87,7 +87,7 @@ je_the_algerian_departements: "The Algerian Departments"
 je_the_algerian_departements_reason: "The transformation of Algeria from a colonial frontier ruled by the saber, to an integral part of metropolitan [ROOT.GetCountry.GetNameNoFormatting] has begun.\n\nHowever, as our administrators discovered during the conquest, native loyalty is both hard-bought and fickle. In order to properly exploit the many resources of Algeria, we must either bring in a more loyal population base, or we must take drastic measures to ensure the loyalty of the one already there."
 je_the_algerian_departements_tt_1: "The state regions of [SCOPE.sState('je_algiers_state_scope').GetStateRegion.GetName], [SCOPE.sState('je_oran_state_scope').GetStateRegion.GetName], and [SCOPE.sState('je_constantine_state_scope').GetStateRegion.GetName] must be fully owned and [Concept('concept_incorporated_state','$concept_incorporated$')|l]."
 #je_the_algerian_departements_tt_2 was removed since it was using old gameconcept 'concept_accepted_culture', and not used in the JE anymore
-je_the_algerian_departements_tt_3: "The [SCOPE.sCulture('french_culture_scope').GetName] [Concept('concept_pop','$concept_population$')|l] of [SCOPE.sState('je_algiers_state_scope').GetStateRegion.GetName], [SCOPE.sState('je_oran_state_scope').GetStateRegion.GetName], and [SCOPE.sState('je_constantine_state_scope').GetStateRegion.GetName] is greater than or equal to #bold 10%#!."
+je_the_algerian_departements_tt_3: "The [SCOPE.sCulture('french_culture_scope').GetName] [Concept('concept_pop','$concept_population$')|l] of [SCOPE.sState('je_algiers_state_scope').GetStateRegion.GetName], [SCOPE.sState('je_oran_state_scope').GetStateRegion.GetName], and [SCOPE.sState('je_constantine_state_scope').GetStateRegion.GetName] is greater than or equal to #bold 10%#!."	# vanilla 20%
 
 je_reconquest_of_algeria: "The Algerian War of Resistance"
 je_reconquest_of_algeria_reason: "In 1830, the #bold Deylik of Algiers#! fell to the accursed French. Their victory however, was not complete, and the Algerian interior remains unbroken. With the aid of God, we shall push the invaders back into the sea, and consolidate the three #bold Beyliks#! under our benevolent rule."
@@ -784,7 +784,12 @@ je_haitian_debt_payment_button_desc: "Authorise a large payment to the [SCOPE.sC
 je_haitian_cancel_debt_button: "Unilaterally Cancel Debt"
 je_haitian_cancel_debt_button_desc: "Enough is enough. We would rather pay for our independence in blood than bleed our coffers dry for the damned [SCOPE.sCountry('france_scope').GetAdjectiveNoFlag]."
 je_haitian_cancel_debt_button_tt: "This decision will not be well-received in [SCOPE.sCountry('france_scope').GetName], and their willingness to wage war against us can be expected to rise drastically."
-modifier_cancelled_haiti_debt: "Unilaterally Cancelled Debt"
+modifier_cancelled_haiti_debt_1: "Unilaterally Cancelled Debt"
+modifier_cancelled_haiti_debt_2: "$modifier_cancelled_haiti_debt_1$"
+modifier_cancelled_haiti_debt_3: "$modifier_cancelled_haiti_debt_1$"
+modifier_cancelled_haiti_debt_4: "$modifier_cancelled_haiti_debt_1$"
+je_haitian_cancel_debt_not_tt: "Has #b not#! unilaterally canceled the debt"
+je_haitian_cancel_debt_tt: "Has unilaterally canceled the debt"
 
 modifier_french_independence_payments_1: "Small French Independence Payments"
 modifier_haitian_independence_payments_1: "Small Haitian Independence Payments"
