--- a/localization/english/brazil_1_l_english.yml
+++ b/localization/english/brazil_1_l_english.yml
@@ -75,6 +75,7 @@
   pedro.12.f: ""This has been the most fatal blow I could have received, and I certainly would not have survived had it not been that I still have a wife and two children whom I need to educate so that they can guarantee the happiness of the country in which they were born.""
   pedro.12.a: "Women are not fit to rule."
   pedro.12.b: "Isabel must be groomed to take the throne."
+  add_2_pedropoint: "The progress bar of the #Bold Magnanimous Monarch#! [concept_journal_entry] is advanced by #Bold 2#!"
   add_3_pedropoint: "The progress bar of the #Bold Magnanimous Monarch#! [concept_journal_entry] is advanced by #Bold 3#!"
   pedro.13.t: "Heir to the Empire"
   pedro.13.d: "Years of grooming have at last prepared [SCOPE.sCharacter('isabel_scope').GetPrimaryRoleTitle] [SCOPE.sCharacter('isabel_scope').GetFirstName] to take her father's throne. Even those most staunchly opposed have come to accept that the line of succession is secure."
@@ -129,7 +130,7 @@
  # Brazilian Naval Power
  je_brazil_navy: "Brazilian Naval Power"
  je_brazil_navy_reason: "Ever since independence the Brazilian Navy has played a crucial role in safeguarding our sovereignty. We must strive to be the foremost naval power in South America, and among the greatest in the world."
- je_brazil_navy_goal: "The following must be true for at least 20 years:"
+ je_brazil_navy_goal: "The following must be true for at least 20 years:"	# vanilla 40
  best_south_american_navy: "No country in South America has greater naval [concept_power_projection] than Brazil"
  brazil_navy.1.t: "Brazilian Naval Power"
  brazil_navy.1.d: "On behalf of our [GetPopType('officers').GetName], [SCOPE.sCharacter('admiral_scope').GetPrimaryRoleTitle] [SCOPE.sCharacter('admiral_scope').GetLastName] reminds the government of the importance of maintaining [ROOT.GetCountry.GetAdjective] sea power. We must strive to be the foremost naval power in South America, and among the greatest in the world."
