great game + fixes

--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -1,5 +1,15 @@
 ﻿l_english:
 
+    #Great Game
+    every_subject_tt: "Every [concept_subject] will get the following modifier:"
+    subject_great_game_victor: "Subject of Great Game Winner"
+    subject_great_game_defeated: "Subject of Great Game Loser"
+    british_great_game_victory_values_tt: "#v British#! progress in the #bold Great Game#! has reached #v 200%#!"
+    russian_great_game_victory_values_tt: "#v Russian#! progress in the #bold Great Game#! has reached #v 200%#!"
+    great_game_power_bloc_tt: "Your [concept_power_bloc] will gain the following modifier:"
+    great_game_victor_power_bloc_modifier: "Power Bloc Won the Great Game"
+    great_game_defeated_power_bloc_modifier: "Power Bloc Lost the Great Game"
+
     #Infamy
     country_infamy_generation_low_liberty_desire_mult: "Low liberty desire subjects have less infamy generation"
 
@@ -33,15 +43,10 @@
     modifier_portugal_brz_transoceanic_empire: "Pluricontinentalismo
     brz_new_metropole: "The New Metropole"
     lusofonia.3.d_3:0 "[SCOPE.sCountry('portugal_scope').GetName] has been brought beneath the [ROOT.GetCountry.GetAdjective] crown. Through war and determination, the balance of empire has been reversed, and a transatlantic personal union restored under [ROOT.GetCountry.GetAdjective] leadership."
-    annex_por_brz:0 "Annex Portugal"
-    annex_por_brz_desc:0 "With #v $POR$#! bound to the $BRZ_ADJ$ crown and its autonomy reduced to a formality, the time has come to end the illusion of separation. We will move to incorporate #v $POR$#! directly into the realm, extinguishing the last remnants of metropolitan defiance and securing the empire as one."
-
 
     #Portugal
     dyn_c_united_kingdom_por:1 "United Kingdom of Portugal and Brazil"
     has_reconquista_je_tt: "Has the #v $je_portuguese_reconquista$#! [concept_journal_entry]"
-    annex_brazil_por:0 "Annex Brazil"
-    annex_brazil_por_desc:0 "With #v $BRZ$#! bound to the $POR_ADJ$ crown and its autonomy reduced to a formality, the time has come to end the illusion of separation. We will move to incorporate #v $BRZ$#! directly into the realm, extinguishing the last remnants of colonial secession and securing the empire as one."
     brazil_infamy_decrease:0 "Less Infamy for Brazil"
     lusofonia.3.d_2:0 "[SCOPE.sCountry('brazil_scope').GetName] has been forced back beneath the [ROOT.GetCountry.GetAdjective] crown. Through war and determination, the loss of empire has been reversed and a personal union restored."
     invade_brazil_button:0 "Invade Brazil"
@@ -198,6 +203,8 @@
     #Persia
     persia_events.1.e:0 "The east must be brought into our sphere."
     persia_events.1.g:0 "The north will fall to us."
+    sovereignty_established: "Sovereignty Firmly Established"
+    persia_consolidated: "Persia Consolidated"
 
 
     #American Civil War
