company mandate fix

--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -1,5 +1,11 @@
 ﻿l_english:
 
+    #Companies
+    company_ludwig_moser_and_sons_power_bloc_modifier: "Glasfabrik Ludwig Moser & Söhne"
+    company_maison_worth_power_bloc_modifier: "Maison Worth"
+    company_kinkozan_sobei_power_bloc_modifier: "Kinkozan Sobei"
+    company_pedro_domecq_power_bloc_modifier: "Pedro Domecq"
+
     #Great Game
     every_subject_tt: "Every [concept_subject] will get the following modifier:"
     subject_great_game_victor: "Subject of Great Game Winner"
@@ -12,10 +18,6 @@
 
     #Infamy
     country_infamy_generation_low_liberty_desire_mult: "Low liberty desire subjects have less infamy generation"
-
-    #British subjects
-    canada_australia_rejoin_decision:0 "Rejoin the British Sphere"
-    canada_australia_rejoin_decision_desc:0 "The Empire may have loosened its grip, but history, commerce, and kinship still bind us to #v $GBR$#!. By accepting the return of British influence, we secure diplomatic backing and renewed access to imperial markets — not as a subject reclaimed, but as a partner choosing stability over isolation."
 
 
     #Synthetics Company
@@ -157,6 +159,9 @@
     can_unified_canada_new:0 "Canadian Federation"
     australia_growth_modifier:0 "Australian Expansion"
     aus_unified_australia_new:0 "Australian Federation"
+    canada_australia_rejoin_decision:0 "Rejoin the British Sphere"
+    canada_australia_rejoin_decision_desc:0 "The Empire may have loosened its grip, but history, commerce, and kinship still bind us to #v $GBR$#!. By accepting the return of British influence, we secure diplomatic backing and renewed access to imperial markets — not as a subject reclaimed, but as a partner choosing stability over isolation."
+
 
     #Italy
     modifier_italian_unification_discouraged: "Italian Unification Discouraged"
