fixing error log bugs

--- a/localization/english/less_clicks_l_english.yml
+++ b/localization/english/less_clicks_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
- DECISION_TOOLTIP_FORMAT:1 "#header $NAME$#!\n$TOOLTIP_DELIMITER$\n$TRIGGER_SUMMARY$\n\nWhen taken:\n$EFFECT_SUMMARY$"
+ # DECISION_TOOLTIP_FORMAT:1 "#header $NAME$#!\n$TOOLTIP_DELIMITER$\n$TRIGGER_SUMMARY$\n\nWhen taken:\n$EFFECT_SUMMARY$"
 
  build_railways:0 "Build railways"
  build_railways_desc:0 "Adds just enough railways everywhere to ensure full market access"
