--- a/localization/english/replace/betterdecrees_l_english.yml
+++ b/localization/english/replace/betterdecrees_l_english.yml
@@ -42,11 +42,14 @@
 #from conquerer of nature to citizen of it
 #maybe event creating arable land? connection to national parks
 
- decree_disenfranchise:0 "Civic Suppression"
- decree_disenfranchise_desc:0 "Suppress political engagement and influence."
+decree_disenfranchise:0 "Civic Suppression"
+decree_disenfranchise_desc:0 "Suppress political engagement and influence."
 
 #decree_red_tape:0 "Cut Red Tape" #change
 #decree_red_tape:0 "By authority of the state, the state shall have less authority over business."
+
+decree_bd_grant_autonomy:0 "Grant Local Autonomy"
+decree_bd_grant_autonomy_desc:0 "Without constant interference, communities adapt. Sometimes efficiently, sometimes chaotically"
 
 building_group_bg_monuments_throughput_add:0 "Monuments [concept_throughput]"
 building_group_bg_canals_throughput_add:0 "Canals [concept_throughput]"
@@ -58,4 +61,4 @@ state_radicals_from_sol_change_mult:0 "$concept_radicals$ from [concept_sol] cha
 state_radicals_from_sol_change_mult_desc:0 "A bonus or penalty to how many [Concept('concept_pop', '$concept_pops$')] will become [concept_radical] from changes in [concept_sol]"
 
 state_loyalists_from_sol_change_mult:0 "$concept_loyalists$ from [concept_sol] changes"
-state_loyalists_from_sol_change_mult_desc:0 "A bonus or penalty to how many [Concept('concept_pop', '$concept_pops$')] will become concept_loyalist from changes in [concept_sol]"
+state_loyalists_from_sol_change_mult_desc:0 "A bonus or penalty to how many [Concept('concept_pop', '$concept_pops$')] will become [concept_loyalist] from changes in [concept_sol]"
