--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -1,5 +1,5 @@
 ﻿l_english:
-
+    ### This file is for custom keys, for replacing vanilla keys go to localization/replace/tyrone_content_replace_l_english.yml
     #Companies
     company_ludwig_moser_and_sons_power_bloc_modifier: "Glasfabrik Ludwig Moser & Söhne"
     company_maison_worth_power_bloc_modifier: "Maison Worth"
@@ -81,8 +81,6 @@
     spain_guide.1.a: "In order to normalize relations with Hispanoamerica, we must stay as #bold Isabelline [ROOT.GetCountry.GetName]#!.
     spain_guide.1.b: "The #bold [SCOPE.sCountry('carlist_scope').GetAdjective]#! path of #bold Reconquista#! is more favorable."
     modifier_integrated_colony_overlord: "Colonies Financially Integrated"
-    je_hispanoamerica_improve_relations: "[ROOT.GetCountry.GetAdjective] [concept_relations] with #b all former [ROOT.GetCountry.GetAdjectiveNoFormatting] colonies#! improves by #g 50#!"
-    je_hispanoamerica_improve_leverage: "If we are the leader of a [concept_power_bloc], [ROOT.GetCountry.GetName] gains #positive_value 1000#! [concept_power_bloc_leverage] in #b all former [ROOT.GetCountry.GetAdjectiveNoFormatting] colonies#!"
     spain_elected_bureaucrats_tt: "having [GetLawType('law_elected_bureaucrats').GetName] [concept_law]"    
     spain_right_of_assembly_tt: "having [GetLawType('law_right_of_assembly').GetName] [concept_law]"  
 
@@ -204,6 +202,8 @@
     automatic_privatization_decision_remove_desc:0 "Disables Automatic Privatization"
     modifier_auto_privatize:0 "Automatic Privatization"
 
+    # proce3ds engine pm
+    pm_improved_steam_engines:0 "Improved Steam Engines"
 
     #Persia
     persia_events.1.e:0 "The east must be brought into our sphere."
