--- a/localization/english/brazil_1_l_english.yml
+++ b/localization/english/brazil_1_l_english.yml
@@ -303,7 +303,7 @@
  wa_migration2_tt: "Every [concept_incorporated_state] in Western America gets:\n#tooltippable Coming to America#!\n#P +25.00%#! [concept_migration_pull]"
  sa_migration_completion_tt: "Our #variable South American#! incorporated states have met our target population"
  wa_migration_completion_tt: "Our incorporated states in the #variable Pacific Coast#! and #variable Great Plains#! have met our target population"
- ca_migration_completion_tt: "Our incorporated states in #variable Central America#! and #variable Mexico#! have met our target population"
+ ca_migration_completion_tt: "Our incorporated states in the #variable Caribbean#!, #variable Central America#! and #variable Mexico#! have met our target population"
  sa_migration_attraction: "Coming to America"
  populated_southamerica: "Populated Nation"
  sa_migration.3.t: "Multitudinous"
