--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -1,5 +1,16 @@
 ﻿l_english:
 
+    #Egypt
+    integrate_south_sudan_decision:0 "Integrate South Sudan"
+    integrate_south_sudan_decision_desc:0 "With the southern territories now under full control, the administration can begin the process of formally integrating the region."
+    egypt_darfur_decision:0 "Integrate Darfur"
+    egypt_darfur_decision_desc:0 "With the surrounding regions stabilized and Darfur fully controlled, the administration can now move to formally incorporate the territory."  
+    integrating_darfur:0 "Integrating Darfur"
+    annex_south_sudan_decision:0 "Annex the Southern Sudan"
+    annex_south_sudan_decision_desc:0 "With the frontier secured and the western territories fully incorporated, the time has come to press our claims deeper along the Upper Nile and bring the southern polities to heel."
+    integrating_south_sudan: "Integrating South Sudan"
+
+
     #Companies
     company_ludwig_moser_and_sons_power_bloc_modifier: "Glasfabrik Ludwig Moser & Söhne"
     company_maison_worth_power_bloc_modifier: "Maison Worth"
@@ -135,7 +146,7 @@
     
     #Russia
     crushed_central_asian_resistance: "Crushed Central Asian Resistance"
-    
+
     #Ottoman 
     integrating_levant: "Reincorporating the Levant"
     integrating_egypt: "Reincorporating the Nile"    
@@ -154,13 +165,18 @@
     modifier_ottoman_army_modernization:0 "Army Modernized"
     modifier_ottoman_bureaucratic_reform:0 "Bureaucratic Reform"
     
-    #Australia and Canada  
+    #Australia, South Africa and Canada  
     canada_growth_modifier:0 "Canadian Expansion"
     can_unified_canada_new:0 "Canadian Federation"
     australia_growth_modifier:0 "Australian Expansion"
     aus_unified_australia_new:0 "Australian Federation"
     canada_australia_rejoin_decision:0 "Rejoin the British Sphere"
     canada_australia_rejoin_decision_desc:0 "The Empire may have loosened its grip, but history, commerce, and kinship still bind us to #v $GBR$#!. By accepting the return of British influence, we secure diplomatic backing and renewed access to imperial markets — not as a subject reclaimed, but as a partner choosing stability over isolation."
+    je_australian_migration: "Populating Australia"
+    je_australian_migration_reason: "Our Australian [Concept('concept_incorporated_state','$concept_incorporated$')] [Concept('concept_pop', '$concept_population$')] is [Country.MakeScope.Var('australian_incorporated_population').GetValue]\nOur target [Concept('concept_pop', '$concept_population$')] is [Country.MakeScope.Var('australian_migration_goal').GetValue]\n\n[ROOT.GetCountry.GetName] is a vast and fortunate land, though it is sparsely populated. We must look beyond the seas, particularly to troubled Europe, for potential settlers to work our fields and factories."
+    au_migration_completion_tt: "Our incorporated states in #variable Australia#! have met our target population"
+    modifier_australian_migration:0 "Australian Migration"
+    modifier_south_african_union:0 "South African Union"
 
 
     #Italy
