--- a/localization/english/sphere_of_influence_4_l_english.yml
+++ b/localization/english/sphere_of_influence_4_l_english.yml
@@ -49,11 +49,11 @@
 
   modifier_european_military_assistance: "European Military Assistance"
   modifier_afghan_military_training_costs: "Sponsoring Afghan Contender"
-  all_pashtun_or_tajik_countries_puppeted_tt: "All [SCOPE.sCulture('pashtun_scope').GetName] or [SCOPE.sCulture('tajik_scope').GetName] [Concept('concept_country', '$concept_countries$')] in the [SCOPE.sStrategicRegion('persia_region').GetName] [concept_strategic_region] are our [Concept('concept_subject', '$concept_subjects$')]"
+  all_pashtun_or_tajik_countries_puppeted_tt: "All [SCOPE.sCulture('pashtun_scope').GetName] or [SCOPE.sCulture('tajik_scope').GetName] [Concept('concept_country', '$concept_countries$')] in the [SCOPE.sStrategicRegion('persia_region').GetName] [concept_strategic_region] are our [Concept('concept_subject', '$concept_subjects$')] or in our [concept_power_bloc]"
 
   je_maintain_afghan_protectorate: "Secure Afghan Protectorate"
   je_maintain_afghan_protectorate_reason: "The mountainous borderlands between the Indian subcontinent and the steppes of Central Asia hold the key to establishing a solid and advantageous border against our rival. To secure protection of our interests and a route to assail our opponents, we must acquire stable [Concept('concept_subject', '$concept_subjects$')] throughout the Afghan region."
-  je_maintain_afghan_protectorate_goal: "Establish and maintain a [concept_subject] relationship with all Afghan nations for #variable 5 years#!"
+  je_maintain_afghan_protectorate_goal: "Establish and maintain a [concept_subject] or [concept_power_bloc] member relationship with all Afghan nations or nations owning Afghan states for #variable 5 years#!"
   
   je_consolidate_afghanistan_objective: "Consolidate Afghanistan"
   je_consolidate_afghanistan_objective_reason: "The ill-defined borders of Afghanistan present opportunity for a crisis and devastating war in the Pamirs. In order to stabilize the border between ourselves and our opponent, we must collaborate to solidify an Afghan state."
@@ -257,7 +257,7 @@
   je_consolidate_central_asia: "Consolidate Central Asian Holdings"
   je_consolidate_central_asia_reason: "The region of Central Asia has long been out of our control, run by disparate khanates and emirates. In order to secure access to India, we must ensure that the Central Asian states are subjugated, whether as [Concept('concept_subject', '$concept_subjects$')] or through direct conquest."
 
-  owned_by_this_country_or_subjects_tt:1 "Is owned by [ROOT.GetCountry.GetName] or her [Concept('concept_subject', '$concept_subjects$')]"
+  owned_by_this_country_or_subjects_tt:1 "Is owned by [ROOT.GetCountry.GetName] or her [Concept('concept_subject', '$concept_subjects$')] or [concept_power_bloc] member"
   completely_owned_by_this_country_or_subjects_tt:1 "Is completely owned by [ROOT.GetCountry.GetName] or her [Concept('concept_subject', '$concept_subjects$')]"
 
   je_chinese_concessions: "Acquire Manchurian Concessions"
