--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -1,5 +1,7 @@
 ﻿l_english:
 
+
+
     #Egypt
     integrate_south_sudan_decision:0 "Integrate South Sudan"
     integrate_south_sudan_decision_desc:0 "With the southern territories now under full control, the administration can begin the process of formally integrating the region."
@@ -35,7 +37,8 @@
     company_synth_oil_dynamic_name_tag_singular: "Synthetic"
     company_synth_oil_dynamic_name_tag_plural: "Synthetics"
 
-    #Enforce PU Diplo Play
+    #Wargoals
+    enforced_law_upon: "Law Forced Upon Us"
     dp_enforce_pu: "$war_goal_enforce_pu_type_name$"
     dp_enforce_pu_tooltip: "#header Start a $dp_enforce_pu$ [concept_diplomatic_play]#!\n$TOOLTIP_DELIMITER$\n$dp_enforce_pu_desc$"
     dp_enforce_pu_desc: "Sets the initiating [concept_war_goal] to force the targeted [concept_country] to become your [concept_personal_union]."
