south america stuff

--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -193,8 +193,10 @@
     jap_mapi:0 "Japanese Internal Focus"
     
 
-    #America
+    #Americas
     modifier_america_migration:0 "American Migration"
+    ended_caudillos_modifier:0 "Ended Age of Caudillos"
+    get_claims_south_america_tt: "[ROOT.GetCountry.GetName] gets claims on all [Concept('concept_state', '$concept_states$')] in [GetGeographicRegion('geographic_region_andean_federation').GetName]"
 
     #Germany
     je_north_german_fed_pu:0 "North German Confederation"
