--- a/localization/english/tyrone_content_l_english.yml
+++ b/localization/english/tyrone_content_l_english.yml
@@ -188,6 +188,11 @@
     italian_unifier_prestige_new:0 "Risorgimento"
     italian_unifiers_ig_new:0 "Italian Unifiers"   
     modifier_risorgimento_je:0 "Risorgimento"
+    italian_unification.1.c:0 "Now that #bold Italia#! has been unified under the #v Roman Republic#!, it is time for our great nation to reclaim the old glory of #bold #red Rome!#!#!"
+    rome_restored:0 "Rome Restored"
+    roman_military:0 "Roman Legions"
+    dyn_c_roman_republic_adj:0 "Roman"
+
 
     #Japan
     jap_mapi:0 "Japanese Internal Focus"
