[Feat]: add more amendments
Corporate control also works for intervention and agrarianism
Added navy focus amendment
Added family values amendment
Added human waves tactics amendment
Added public daycare amendment

--- a/localization/english/amendments_ip4_l_english.yml
+++ b/localization/english/amendments_ip4_l_english.yml
@@ -194,3 +194,15 @@ amendment_economic_regeneration_2_desc: "The success of the Regeneration has led
 
 amendment_corporate_control: "Corporate Construction Control"
 amendment_corporate_control_desc: "The construction economy is nearly entirely controlled by the private sector, with little Government intervention."
+
+amendment_navy_focus: "Naval Military Focus"
+amendment_navy_focus_desc: "In recent military budget allocation rounds, the Government has opted for more funding to go the Navy's way than the Army's."
+
+amendment_family_values: "Family Values Curriculum"
+amendment_family_values_desc: "Children are taught 'proper family values' early in their curriculum."
+
+amendment_human_waves_tactics: "Human Waves Tactics"
+amendment_human_waves_tactics_desc: "Military High Command has opted for a high-cost, high-reward strategy in war."
+
+amendment_public_daycare: "Government Daycares"
+amendment_public_daycare_desc: "Government-subsidised daycares were put in place to support working mothers by taking care of their children during the day."
